data/derived/comb/progs/unify/prog0649.ml.out
Characters 133-137:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'a
       but an expression was expected of type 'b list
